--- a/Multilayer Perceptron.ipynb
+++ b/Multilayer Perceptron.ipynb
@@ -217,7 +217,8 @@
     "                if epoch % display_step == 0:\n",
     "                    print(\"Epoch:\", '%04d' % (epoch+1), \"cost =\", \"{:.9f}\".format(avg_cost))\n",
     "\n",
-    "                    accuracy = sess.run(eval_op, feed_dict={x: mnist.validation.images, y: mnist.validation.labels})\n",
+    "                    accuracy = sess.run(eval_op, feed_dict={x: mnist.validation.images,\n",
+    "                                                            y: mnist.validation.labels})\n",
     "\n",
     "                    print(\"Validation Error:\", (1 - accuracy))\n",
     "\n",
